--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
     <script src="/static/js/source.js"></script>
+    <script src="/static/js/video.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -21,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
 
     <style>
-      body,h3,h4,h5,h6,pre {font-family: 'Gothic A1', sans-serif;}
+      body,h3,h4,h5,h6,pre,p {font-family: 'Gothic A1', sans-serif;}
       h1 {font-family: 'Montserrat';}
     </style>
   </head>
