--- a/applications/templates/streaming.html
+++ b/applications/templates/streaming.html
@@ -8,9 +8,9 @@
     
     <table width="100%" style="margin-top:30px; margin-bottom:50px;">
         <tr>
-            <td width="60%">
+            <td width="50%">
                 {% comment %} 학습하기 {% endcomment %}
-                <div id="playerArea" style="margin-left:30px;width:90%;">
+                <div id="playerArea" style="margin-left:30px;padding-right:50px;width:100%;">
                     <h1>Lecture Video</h1>
                     {% comment %} 동영상 플레이어 {% endcomment %}
                     <div id="videoArea" style="margin-top:15px; display:inline-block;width:95%;">
@@ -20,46 +20,26 @@
                     </div>
                 </div>
             </td>
-            <td>
+            <td width="30%">
                 {% comment %} 퀴즈 {% endcomment %}
-                <div style="width:400px; height:373px">
-                    <div id="quizArea" style="width:100%; display:none; padding-right:20px;">
+                <div>
+                    <div id="quizArea" style="width:80%; height:90%; display:none;">
                         <h1>Quiz</h1>
-                        <div id='quizSlide1' style="margin-top:25px; background-image:url('/static/svg/quizBoard.svg'); background-repeat:no-repeat; backgroud-size:100% 100%;">
-                            <p>강의 영상 00:20 로부터 생성된 퀴즈입니다.</p>
-                            <br>
-                            <span style='margin-right:10px; border :1px solid black;'>pizza</span>
-                            <span style='margin-right:10px; border :1px solid black;'>pasta</span>
-                            <br><br>
-                            <p style='font-weight:bold'>피자는 어느 나라에서 만들어졌을까요?</p>
-                            <br>
-                            <a onclick="questionToggle('quiz1')"><div>Click!</div></a>
+                        <div id='quizSlide1' style="margin-top:15px; background-image:url('/static/svg/quizBoard.svg'); background-repeat:no-repeat; background-size:cover;">
+                            <div style='margin-left:20px;'>
+                                <br>
+                                <p style='color:gray; font-size:12px;'>강의 영상 00:20 로부터 생성된 퀴즈입니다.</p>
+                                <br>
+                                <span class="quizKeyword" style="font-weight:bold; background-color: #054FD3; padding:5px 15px 5px 15px; margin-right:10px; border-radius: 17px; border-collapse: collapse; color: white; border: 0px;">pizza</span>
+                                <span class="quizKeyword" style="font-weight:bold; background-color: #054FD3; padding:5px 15px 5px 15px; margin-right:10px; border-radius: 17px; border-collapse: collapse; color: white; border: 0px;">pasta</span>
+                                <br><br>
+                                <p style='font-weight:bold'>피자는 어느 나라에서 만들어졌을까요?</p>
+                                <br>
+                                <a onclick="questionToggle('quiz1')"><div id='quizDiv1' style='color:gray'>정답 : Click!</div></a>
+                                <a onclick="questionToggle('quiz1')"><div id='ansDiv1' style='color:gray;display:none'>정답 : 이탈리아</div></a>
+                                <br>
+                            </div>
                         </div>
-
-                        {% comment %} 
-                            <table width="400px" height="300px" cellspacing="5" style="fond-family:'Nanum Gothic'; text-align:center; border:1px solid black; border-radius: 5%;">
-                                <tr height="100px">
-                                    <th colspan="2" bgcolor="#d5e8bb">keyword : 피자</th>
-                                </tr>
-                                <tr>
-                                    <td bgcolor="#d5e8bb" width="100px">
-                                        <a onclick="moveTime('quiz1');">00:20</a>
-                                    </td>
-                                    <td>
-                                        <a onclick="questionToggle('quiz1');">
-                                            <div id='quizDiv1' style="background-color:#d5e8bb; width:100%; height:100%; line-height: 200px;";>
-                                                피자는 어디서 처음으로?
-                                            </div>
-                                        </a>
-                                        <a onclick="questionToggle('quiz1');">
-                                            <div id='ansDiv1' style="background-color:#adbc98; width:100%; height:100%; display:none;  line-height: 200px;";>
-                                                이탈리아
-                                            </div>
-                                        </a>
-                                    </td>
-                                </tr>
-                            </table>
-                        </div> {% endcomment %}
                     </div>
                 </div>
             </td>
@@ -68,22 +48,23 @@
     
 
     {% comment %} 스크립트 {% endcomment %}
-    <div id="scriptArea" style="margin-left:30px;margin-right:30px;width:100%; margin-bottom:50px;">
+    <div id="scriptArea" style="margin-left:30px; width:800px; height:600px">
         <h1>Script</h1>
         <button id="scriptBtn" onclick="scriptToggle();">스크립트 열기</button>
-        <div id="scriptValue" style="margin-top:20px; padding-left:10px; font-family:'Nanum Gothic'; display:none; border:0.5px solid black;">
-<pre>
-스크립트가 있었다면
-내가 이렇게 직접 치지도 않고
-얼마나 좋았을까
-하는 생각이 들긴하는데
-레이아웃잡을려면
-이렇게 직접 쳐보는 수 밖에 없는 현실에ㅔ
-눈물이 또르르
-</pre>
+        <div id="scriptValue" style="margin-top:10px;display:none; background-image:url('/static/svg/quizBoard.svg'); background-repeat:no-repeat; background-size:cover;">
+            <div style="margin-left:30px; height:420px"><br><br>
+                dasd<br>
+                dasd<br>
+                dasd<br>
+                dasd<br>
+                dasd<br>
+                dasd<br>
+            </div>
         </div>
     </div>
-
+    <br>
+    <br>
+    <br>
 </div>
     
 <!-- End page content -->
