--- a/applications/templates/cornell.html
+++ b/applications/templates/cornell.html
@@ -85,7 +85,7 @@
     <input type="button" value="수정하기" onClick="location.href='detail'" style="width: 150px; background-color: #054FD3; margin-right:10px; font-size: 16px; border-radius: 17px; border-collapse: collapse; color: white; border: 0px;">
     <input type="button"  data-toggle="modal" data-target="#myModal" value="키워드 & 요약" onClick="modalKeyword()" style="width: 180px; background-color: #054FD3; font-size: 16px; border-radius: 17px; border-collapse: collapse; color:white; border:0px; margin-right:5px;  ">
     <button type="button" onClick="location.href='download'" style="border: none; outline:none; background:none;">
-      <img src='/static/svg/export.svg' width="30px" height="30px" >
+      <img src='/static/svg/export.svg' title="코넬식 노트 다운받기" width="30px" height="30px" >
     </button> 
 
 
