--- a/applications/templates/streaming.html
+++ b/applications/templates/streaming.html
@@ -14,8 +14,7 @@
                     <h1>Lecture Video</h1>
                     {% comment %} 동영상 플레이어 {% endcomment %}
                     <div id="videoArea" style="margin-top:15px; display:inline-block;width:95%;">
-                        <video id="myVideo" width="100%" controls style='border-radius: 30px;'>
-                            <source src="/static/video/sample.mp4" type='video/mp4'>
+                        <video id="myVideo" src="/static/video/sample.mp4" type='video/mp4' width="100%" controls style='border-radius: 30px;'>
                         </video>
                     </div>
                 </div>
