--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -40,10 +40,10 @@
     </div>
   </div>
   <div class="w3-bar-block" sytle="text-ali;">
-    <a href="/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/intro.svg" width=60px height=60px></a> 
-    <a href="/function" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/function.svg" width=60px height=60px></a> 
-    <a href="/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/proto.svg" width=60px height=60px></a>
-    <a href="/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/cornell.svg" width=60px height=60px></a>
+    <a href="/" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/intro.svg" title="소개" width=60px height=60px></a> 
+    <a href="/function" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/function.svg" title="기능 설명" width=60px height=60px></a> 
+    <a href="/streaming" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/proto.svg" title="프로토타입" width=60px height=60px></a>
+    <a href="/cornell" onclick="w3_close()" class="w3-bar-item w3-button w3-padding" style="text-align:center;"><img src="/static/svg/cornell.svg" title="코넬식 노트" width=60px height=60px></a>
   </div>
 </nav>
 
