--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -1,12 +1,28 @@
 <!doctype html5>
 <html>
     <head>
+        <title>흐르는 강물을 거슬러 오르는 자연어</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
+        <script src="/static/js/source.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
 
         <style>
         body {
             margin:0px;
             padding:0px;
+            font-family: 'Gothic A1', sans-serif;
         }
+        h1 {
+            color:black;
+            font-family: 'Montserrat';
+        }
+
         h2 {
             color:black;
         }
