--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html5>
 <html>
     <head>
@@ -29,8 +31,9 @@
         .left_bar {
             float:left;
             width:38%;
+            height:120%;
             background-color: lightgray;
-            padding: 0% 3% 0% 3%;
+            padding: 0% 3% 5% 3%;
             overflow:auto;
         }
 
@@ -109,45 +112,74 @@
         <div class='left_bar'>
             <div class='left_top'>
                 <p>임진왜란 발발과 전개 양상 핵심 단어</p>
-                <img src='wordcloud.png' width=100%/>
+                <img src='/static/img/wordcloud.png' width=100%/>
             </div>
             <div class='left_middle'>
                 <div class='left_middle_content'>
-                    <p>강의 영상 00:20 으로부터 생성된 퀴즈입니다</p>
-                    <h2>피자는 어느 나라에서 만들어졌을까요?</h2>
-                    <p>정답을 보려면 클릭하세요</p>
+                    <p></p>
+                    <h2>Quiz</h2>
+                    <p></p>
                 </div>
             </div>
             <div class='left_bottom'>
-                <h3>강의 스크립트</h3>
-                <p>이것은 모래뿐인 군영과 칼이다. 그림자는 가치를 어디 소금이라 같은 청춘의 할지니 사막이다. 많이 그것은 이상의 황금시대를 찬미를 창공에 있다. 그와 지혜는 속잎나고, 옷을 아니다, 역사를 과실이 보이는 아름다우냐? 소금이라 눈이 목숨이 끓는 운다. 이는 웅대한 그것은 인류의 끓는 인간이 열매를 못할 듣는다. 위하여, 그들에게 그러므로 풍부하게 노래하며 인간의 사막이다. 그것을 어디 주며, 긴지라 사막이다.</p>
+                <h2>강의 스크립트</h2><br>
+                {% for line in lines %}
+                    {{ line }}
+                    <br>
+                {% endfor %}
             </div>
         </div>
         
         <div class='right_bar'>
             <div class='right_top'>
                 <p> 한국사 특강(최태성) 개 - 05강 임진왜란의 발발과 전개 양상</p>
-                <video id='myVideo' src='http://www.tomodevel.jp/material/video/disneyTour.mp4' type='video/mp4' controls autoplay></video>
+                <video id='myVideo' src='http://www.tomodevel.jp/material/video/disneyTour.mp4' type='video/mp4' controls></video>
+                {% comment %} <video id='myVideo' src='/static/video/sample.mp4' type='video/mp4' controls></video> {% endcomment %}
             </div>
             <div>
                 <div class='right_middle_title'>
-                    임진왜란
+                    <h2>
+                        {% if mynotes.title is not None %}  
+                            {{ mynotes.title }}
+                        {% endif %}
+                    </h2>
                 </div>
                 <div class='right_middle_option'>
-                    수정/저장
+                    <button type="button" onClick="location.href='cornell'" style="border: none; outline:none; background:none;">
+                        <img src='/static/svg/export.svg' title="코넬식 노트 수정하기" width="30px" height="30px" >
+                    </button>
+                    <button type="button" onClick="location.href='download'" style="border: none; outline:none; background:none;">
+                        <img src='/static/svg/export.svg' title="코넬식 노트 다운받기" width="30px" height="30px" >
+                    </button>
                 </div>
                 <div class='right_middle_content'>
                     <div class='right_middle_content_left'>
-                        이순신
-                        <p>도요토미</p>
-                        <p>선조</p>
+                        {% if mynotes.keyword1 is not None %}
+                            {{ mynotes.keyword1 }} <br><br>
+                        {% endif %}
+                        {% if mynotes.keyword2 is not None %}
+                            {{ mynotes.keyword2 }} <br><br>
+                        {% endif %}
+                        {% if mynotes.keyword3 is not None %}
+                            {{ mynotes.keyword3 }} <br><br>
+                        {% endif %}
+                        {% if mynotes.keyword4 is not None %}
+                            {{ mynotes.keyword4 }} <br><br>
+                        {% endif %}
+                        {% if mynotes.keyword5 is not None %}
+                            {{ mynotes.keyword5 }}
+                        {% endif %}
                     </div>
                     <div class='right_middle_content_right'>
-                        임진왜란은 1592년 5월 23일부터 1598년 12월 16일까지 약 7년간 조선과 명나라 대 일본 사이에서 일어난 전쟁이다.
+                        {% if mynotes.content is not None %}
+                            {{ mynotes.content }}
+                        {% endif %}
                     </div>
                 </div>
                 <div class='right_bottom'>
-                    일본 입장에서는 비론 '조선 정복, 대륙 진출'이라는 본래의 목적은 달성하지 못한 패전이나, 각종 인적 물적 자원을 조선으로부터 약탈해 도자기 제조 기술이나 금속활자의 약탈, 성리학 유입 등 문화적 이득 얻음.
+                    {% if mynotes.summary is not None %}
+                        {{ mynotes.summary }}
+                    {% endif %}
                 </div>
             </div>
         </div>
