--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -8,8 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
-        <script src="/static/js/source.js"></script>
-        {% comment %} <script src="/static/js/video.js"></script> {% endcomment %}
+        <script src="/static/js/answer.js"></script>
+        <script src="/static/js/quiz.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
@@ -131,19 +131,19 @@
                     <p>강의 영상 00:03 으로부터 생성된 퀴즈입니다.</p>
                     <h2>헨리 8세의 이혼 문제 때문에 시작된 것은?</h2>
                     <p></p>
-                    <a onclick="questionToggle('quiz1')"><div id='ans1'>정답을 보려면 클릭하세요. Click!</div></a>
+                    <a onclick="ans('quiz1');"><div id='ans1'>정답을 보려면 클릭하세요. Click!</div></a>
                 </div>
                 <div class='quiz2'>
                     <p>강의 영상 00:13 으로부터 생성된 퀴즈입니다.</p>
                     <h2>오랜 세월동안 사람들을 지배한 것은?</h2>
                     <p></p>
-                    <a onclick="questionToggle('quiz2')"><div id='ans2'>정답을 보려면 클릭하세요. Click!</div></a>
+                    <a onclick="ans('quiz2');"><div id='ans2'>정답을 보려면 클릭하세요. Click!</div></a>
                 </div>
                 <div class='quiz3'>
                     <p>강의 영상 00:23 으로부터 생성된 퀴즈입니다.</p>
                     <h2>스위스에 종교 개혁을 한 사람은?</h2>
                     <p></p>
-                    <a onclick="questionToggle('quiz3')"><div id='ans3'>정답을 보려면 클릭하세요. Click!</div></a>
+                    <a onclick="ans('quiz3');"><div id='ans3'>정답을 보려면 클릭하세요. Click!</div></a>
                 </div>
             </div>
             <div class='left_bottom'>
