--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -32,7 +32,7 @@
         .left_bar {
             float:left;
             width:38%;
-            height:120%;
+            height:130%;
             background-color: lightgray;
             padding: 0% 3% 5% 3%;
             overflow:auto;
@@ -94,19 +94,20 @@
         .right_middle_content_left {
             float:left;
             width:30%;
-            height:40%;
-            border-right:1px solid gray;
-            margin-right:5%;
+            height:60%;
         }
 
         .right_middle_content_right {
-            height:40%;
+            border-left:1px solid gray;
+            margin-left:30%;
+            padding-left:5%;
             padding-right:5%;
         }
 
         .right_bottom {
             clear:both;
             padding-right:5%;
+            padding-bottom:5%;
         }
 
         #myVideo {
