--- a/applications/templates/base.html
+++ b/applications/templates/base.html
@@ -19,6 +19,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
 
     <style>
       body,h3,h4,h5,h6,pre,p {font-family: 'Gothic A1', sans-serif;}
