--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -132,6 +132,13 @@
             size: 18pt
         }
 
+        ::-webkit-scrollbar{width: 16px; }
+        ::-webkit-scrollbar-track {background-color:#f1f1f100; margin-right: 40px;}
+        ::-webkit-scrollbar-thumb {background-color:#FFFFFF; border-radius: 10px;}
+        ::-webkit-scrollbar-thumb:hover {background:#FFFFFF;}
+        ::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment {
+        width:16px;height:16px;background:#f1ef7900;} 
+
 
         </style>
     </head>
