--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -36,7 +36,10 @@
             background-color: lightgray;
             padding: 0% 3% 5% 3%;
             overflow:auto;
+
+            resize: horizontal;
         }
+        
 
         .left_top {
             color : gray;
