--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -187,8 +187,8 @@
         
         <div class='right_bar'>
             <div class='right_top'>
-                <p> 한국사 특강(최태성) 개 - 05강 임진왜란의 발발과 전개 양상</p>
-                <video id='myVideo' src='http://www.tomodevel.jp/material/video/disneyTour.mp4' type='video/mp4' controls></video>
+                <p> 이지은의 세계사 101가지 개념완성 - 16강 르네상스와 종교개혁</p>
+                <video id='myVideo' src='https://r2---sn-oguesnz6.c.drive.google.com/videoplayback?expire=1595240633&ei=eTgVX_6mG4meuwK0jYo4&ip=58.234.16.72&cp=QVNOV0NfT1ZRRFhOOlh3WkZWc2s1dXJYMFZlVzFsT2NZZEtMaDR0dmZPWktNU05FXzRob3lXQnc&id=f66fec621e3d4b97&itag=18&source=webdrive&requiressl=yes&mh=0F&mm=32&mn=sn-oguesnz6&ms=su&mv=m&mvi=2&pl=13&sc=yes&ttl=transient&susc=dr&driveid=1QtwChyhMnnD13rGXUC94r2cz5_uO5Aqn&app=explorer&mime=video/mp4&vprv=1&prv=1&dur=1200.007&lmt=1595160691371498&mt=1595226145&sparams=expire,ei,ip,cp,id,itag,source,requiressl,ttl,susc,driveid,app,mime,vprv,prv,dur,lmt&sig=AOq0QJ8wRAIgXqS2Kj6j5RV-n8A-3zGMNxxk4Qt0jbBo4r91PO3u5eYCICIfsxAM1JXBIuI6Ihz65SIslIvuNLRsJUEzHV2uu5p9&lsparams=mh,mm,mn,ms,mv,mvi,pl,sc&lsig=AG3C_xAwRQIhAMk26u-XbEwSuenHXSDMX_khaFDCPU2W8LIDN_hTh7VXAiAES2Q5Vpk-ZVpNKC1EL1IqQ9HDcW8xWmCxv-fA1AfTUg==&cpn=yOdfMjDOQYPmYhXJ&c=WEB_EMBEDDED_PLAYER&cver=20200716' type='video/mp4' controls></video>
                 {% comment %} <video id='myVideo' src='/static/video/sample.mp4' type='video/mp4' controls></video> {% endcomment %}
             </div>
             <div>
