--- a/applications/templates/home.html
+++ b/applications/templates/home.html
@@ -9,7 +9,8 @@
 
         <link href="/static/img/favicon.ico" rel="icon" type="image/x-icon" />
         <script src="/static/js/answer.js"></script>
-        <script src="/static/js/quiz.js"></script>
+        <script src="/static/js/quiz-1.js"></script>
+        <script src="/static/js/jquery-3.5.1.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
@@ -148,7 +149,7 @@
     <body>
         <div class='left_bar'>
             <div class='left_top'>
-                <p>임진왜란 발발과 전개 양상 핵심 단어</p>
+                <p>르네상스와 종교개혁 핵심 단어</p>
                 <img src='/static/img/wordcloud.png' width=100%/>
             </div>
             <div class='left_middle'>
@@ -158,19 +159,19 @@
                     <p></p>
                 </div>
                 <div class='quiz1'>
-                    <p>강의 영상 00:03 으로부터 생성된 퀴즈입니다.</p>
+                    <p>강의 영상 17:56 으로부터 생성된 퀴즈입니다.</p>
                     <h2>헨리 8세의 이혼 문제 때문에 시작된 것은?</h2>
                     <p></p>
                     <a onclick="ans('quiz1');"><div id='ans1'>정답을 보려면 클릭하세요. Click!</div></a>
                 </div>
                 <div class='quiz2'>
-                    <p>강의 영상 00:13 으로부터 생성된 퀴즈입니다.</p>
+                    <p>강의 영상 04:32 으로부터 생성된 퀴즈입니다.</p>
                     <h2>오랜 세월동안 사람들을 지배한 것은?</h2>
                     <p></p>
                     <a onclick="ans('quiz2');"><div id='ans2'>정답을 보려면 클릭하세요. Click!</div></a>
                 </div>
                 <div class='quiz3'>
-                    <p>강의 영상 00:23 으로부터 생성된 퀴즈입니다.</p>
+                    <p>강의 영상 14:18 으로부터 생성된 퀴즈입니다.</p>
                     <h2>스위스에 종교 개혁을 한 사람은?</h2>
                     <p></p>
                     <a onclick="ans('quiz3');"><div id='ans3'>정답을 보려면 클릭하세요. Click!</div></a>
@@ -187,9 +188,9 @@
         
         <div class='right_bar'>
             <div class='right_top'>
-                <p> 한국사 특강(최태성) 개 - 05강 임진왜란의 발발과 전개 양상</p>
-                <video id='myVideo' src='http://www.tomodevel.jp/material/video/disneyTour.mp4' type='video/mp4' controls></video>
-                {% comment %} <video id='myVideo' src='/static/video/sample.mp4' type='video/mp4' controls></video> {% endcomment %}
+                <p>이지은의 세계사 101가지 개념완성 - 16강 르네상스와 종교개혁</p>
+                <video id="myVideo" src="/static/video/sample.mov" controls>
+                </video>
             </div>
             <div>
                 <div class='right_middle_title'>
@@ -201,7 +202,7 @@
                 </div>
                 <div class='right_middle_option'>
                     <button type="button" onClick="location.href='cornell'" style="border: none; outline:none; background:none;">
-                        <img src='/static/svg/export.svg' title="코넬식 노트 수정하기" width="30px" height="30px" >
+                        <img src='/static/svg/edit.svg' title="코넬식 노트 수정하기" width="30px" height="30px" >
                     </button>
                     <button type="button" onClick="location.href='download'" style="border: none; outline:none; background:none;">
                         <img src='/static/svg/export.svg' title="코넬식 노트 다운받기" width="30px" height="30px" >
